syntax = "proto3";

package greeter;

option go_package="greetpb";


// Define the greeting message, and the response and request messages
message Greeting {
    string FirstName = 1;
    string LastName = 2;
    string FavouriteCoffee = 3;

}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse {
    string response = 1;
}

message GreetManyTimesRequest {
    Greeting greeting = 1;
}

message GreetManyTimesResponse {
    string response = 1;
}

service GreetService {
    // Unary greeter api
    rpc Greet(GreetRequest) returns (GreetResponse) {};

    // Server streaming greeting api
    rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse);
}
